--- a/sharedprefs/build.gradle
+++ b/sharedprefs/build.gradle
@@ -1,6 +1,17 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+    }
+}
+
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.yellowhing'
+version = '1.0.0'
 android {
     compileSdkVersion 28
     defaultConfig {
