--- a/sharedprefs/src/main/AndroidManifest.xml
+++ b/sharedprefs/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yellowhing.sharedprefs" />
+    package="de.yellowhing.sharedprefs" />
